--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,8 +1,6 @@
 # Stage 1: Build the React application
-FROM node:20 AS builder
-
+FROM node:20-alpine AS build
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
 COPY . .
@@ -10,10 +8,7 @@ RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
-
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 4000
-
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
